--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.11"
 flask = "^3.0.0"
 gunicorn = "^21.2.0"
 uuid = "^1.30"
+psycopg2 = "^2.9.11"
 
 
 [build-system]
