--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ MarkupSafe==3.0.2
 mccabe==0.7.0
 packaging==24.2
 platformdirs==4.3.6
-psycopg2==2.9.11
+psycopg2-binary
 pylint==3.3.4
 tomlkit==0.13.2
 uuid==1.30
